# astroquery-mcp-server

./: .gitignore  README.md  pyproject.toml  setup.py
astroquery-mcp-server/examples/: claude_desktop_config.json
docs/: installation.md
examples/: example_queries.md
src/astroquery_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
