[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astroquery-mcp-server"
version = "1.0.0"
description = "MCP server for astroquery-cli astronomical queries"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["astronomy", "mcp", "astroquery", "ai", "claude"]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/astroquery-mcp-server"
Repository = "https://github.com/yourusername/astroquery-mcp-server"
Documentation = "https://github.com/yourusername/astroquery-mcp-server/docs"
"Bug Tracker" = "https://github.com/yourusername/astroquery-mcp-server/issues"

[project.scripts]
astroquery-mcp-server = "astroquery_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
